# MetaImageMark

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_paths.txt
benchmark/: .clang-format  CMakeLists.txt  grid.h
benchmark/benchmark_tools/include/imgprcbench/: checkers.h
benchmark/benchmarks/src/box_filter/: CMakeLists.txt  config.h  opencv.cpp
benchmark/benchmarks/src/gauss_filter/: config.h
benchmark/benchmarks/src/lin_transform/: config.h
benchmark/benchmarks/src/merge_image/: minimg.cpp
benchmark/benchmarks/src/verification/: CMakeLists.txt  aver_filter.cpp
benchmark/benchmarks/src/verification/stress_test/: binary_operations.cpp
benchmark/demo/: README.md
benchmark/demo/example1/: main.cpp
benchmark/libraries/: CMakeLists.txt
benchmark_tools/: README.md
benchmark_tools/include/imgprcbench/: benchmark.h  custom_arguments.h  generators.h  verification.h
benchmarks/: README.md
benchmarks/include/: minimg.h  opencv.h
benchmarks/src/box_filter/: minimg.cpp
benchmarks/src/convert/: CMakeLists.txt  config.h  minimg.cpp  opencv.cpp
benchmarks/src/downscale_image/: CMakeLists.txt  config.h  minimg.cpp  opencv.cpp
benchmarks/src/gauss_filter/: opencv.cpp
benchmarks/src/lin_transform/: opencv.cpp
benchmarks/src/merge_image/: CMakeLists.txt
benchmarks/src/transpose_image/: CMakeLists.txt  config.h  opencv.cpp
benchmarks/src/verification/: gauss_filter.cpp
benchmarks/src/verification/stress_test/: lin_transform.cpp
cmake/: BuildTypes.cmake  Dependencies.cmake
data_processing/: README.md
data_processing/report_builder/: __main__.py  benchmark_data.py  benchmark_parser.py  heat_map_html.py  heat_map_reporter.py  json2html.py
demo/example1/: CMakeLists.txt
demo/example2/: CMakeLists.txt  main.cpp
demo/example3/: CMakeLists.txt
demo/example4/: main.cpp
doc/: example.md
grid_benchmark/: CMakeLists.txt
grid_benchmark/include/: grid_benchmark.h
grid_benchmark/include/grid_benchmark/: grid_benchmark.h
grid_benchmark/src/: grid_benchmark.cpp
image_benchmark/: CMakeLists.txt
image_benchmark/grid_benchmark/: CMakeLists.txt
image_benchmark/grid_benchmark/include/: grid_benchmark.h
image_benchmark/grid_benchmark/src/: test_grid_generator.cpp
image_benchmark/grid_benchmark/test/: CMakeLists.txt  test_benchmark.cpp  test_grid.cpp
image_benchmark/include/image_benchmark/: config.h  description.h  generators.h  macros.h  types.h
image_benchmark/minimg_benchmark/: CMakeLists.txt
image_benchmark/minimg_benchmark/include/: common.h  config.h  description_generators.h  image_generators.h
image_benchmark/minimg_benchmark/src/: box_filter.cpp  common.h  config.h  convert.cpp  downscale.cpp  merge.cpp  merge_image.cpp  transpose.cpp
image_benchmark/system_info/include/: system_info.h
image_benchmark/system_info/src/: string_proc.h  system_info.cpp  test_string_proc.cpp
meta_benchmark/: CMakeLists.txt  meta_benchmark.h
meta_benchmark/benchmark_tools/: CMakeLists.txt
meta_benchmark/benchmark_tools/include/imgprcbench/: utility.h
meta_benchmark/benchmarks/: CMakeLists.txt
meta_benchmark/benchmarks/src/: CMakeLists.txt
meta_benchmark/benchmarks/src/gauss_filter/: CMakeLists.txt  minimg.cpp
meta_benchmark/benchmarks/src/lin_transform/: CMakeLists.txt  minimg.cpp
meta_benchmark/benchmarks/src/merge_image/: config.h  opencv.cpp
meta_benchmark/benchmarks/src/transpose_image/: minimg.cpp
meta_benchmark/benchmarks/src/verification/: scale_image.cpp
meta_benchmark/demo/example3/: main.cpp
meta_benchmark/demo/example4/: CMakeLists.txt
meta_benchmark/meta_base/: CMakeLists.txt
meta_benchmark/meta_base/include/: meta_base.h
meta_benchmark/meta_base/test/: CMakeLists.txt  test_benchmark.cpp  test_grid.cpp
meta_benchmark/meta_benchmark/: CMakeLists.txt
meta_benchmark/meta_benchmark/test/: CMakeLists.txt  test_grid.cpp
minimg_benchmark/: CMakeLists.txt
minimg_benchmark/include/: common.h  config.h  description_generators.h  image_generators.h
minimg_benchmark/include/minimg_benchmark/: common.h  config.h  error.h  image.h  scalar_type.h
minimg_benchmark/src/: box_filter.cpp  convert.cpp  downscale.cpp  gauss_filter.cpp  lintransform.cpp  merge.cpp  transpose.cpp
opencv_benchmark/: CMakeLists.txt
opencv_benchmark/include/: common.h  config.h  description_generators.h  image_generators.h
opencv_benchmark/include/opencv_benchmark/: common.h  config.h  image.h  scalar_type.h
opencv_benchmark/src/: box_filter.cpp  convert.cpp  downscale.cpp  gauss_filter.cpp  lintransform.cpp  merge.cpp  transpose.cpp
report_builder/: README.md  color_map.py  heat_map_data.py  heat_map_reporter.py  support.py
report_builder/color_maps/: RdYlGr.rgb
reports/: transpose.html
system_info/: CMakeLists.txt
